--- a/config.cfg
+++ b/config.cfg
@@ -5,6 +5,8 @@ scolar_url=https://x.glgoo.top
 search_url=https://cn.bing.com
 key_word_1=python
 sleep_time=2
+several_name=author
+one_name=intext
 page_num=2
 year=0
 no_window=True
