1、several.txt 增加排序 2、每次stop_num个，分批次下载 3、每次停下来会有声音提示 4、停下来选择停止会将当前进度汇成总表

--- a/config.cfg
+++ b/config.cfg
@@ -1,7 +1,7 @@
 [default]
 save_folder=./pdf
 driver_path=./chromedriver.exe
-scolar_url=https://x.glgoo.top
+scolar_url=https://xs.glgoo.99lb.net
 search_url=https://cn.bing.com
 key_word_1=python
 sleep_time=2
@@ -11,3 +11,4 @@ page_num=2
 year=0
 no_window=False
 xpath=//h2/a
+stop_num=1
