--- a/config.cfg
+++ b/config.cfg
@@ -1,13 +1,13 @@
 [default]
 save_folder=./pdf
 driver_path=./chromedriver.exe
-scolar_url=https://xs.glgoo.99lb.net
+scolar_url=https://scholar.google.com.hk
 search_url=https://cn.bing.com
-key_word_1=python
+key_word_1=source:"journal of management studies" intext:"sensemaking"
 sleep_time=2
 several_name=author
 one_name=intext
-page_num=2
+page_num=3
 year=0
 no_window=False
 xpath=//h2/a
